# iros2019_changkyu

./: README.md
software/planning/: CMakeLists.txt
software/planning/demo/: gen_expr.cpp  run_expr.cpp  run_robot.cpp  show_result.cpp  train_rotator.cpp
software/planning/include/: kinodynamicRRT.hpp  mdp_planner.hpp  planner.hpp  statespace.hpp
software/planning/include/bullet_simulation/: bullet_simulation.hpp  collision_simulation.hpp
software/planning/input/bluebox_kuka/: dove_beauty_bar.n2.001.goal  dove_beauty_bar.n2.001.init  dove_beauty_bar.n2.002.init  dove_beauty_bar.n2.003.init  dove_beauty_bar.n2.004.init  dove_beauty_bar.n2.005.init  dove_beauty_bar.n2.006.init  dove_beauty_bar.n2.007.init  dove_beauty_bar.n2.008.init  dove_beauty_bar.n2.009.init  dove_beauty_bar.n2.010.init  dove_beauty_bar.n3.001.goal  dove_beauty_bar.n3.001.init  dove_beauty_bar.n3.002.init  dove_beauty_bar.n3.003.init  dove_beauty_bar.n3.004.init  dove_beauty_bar.n3.005.init  dove_beauty_bar.n3.006.init  dove_beauty_bar.n3.007.init  dove_beauty_bar.n3.008.init  dove_beauty_bar.n3.009.init  dove_beauty_bar.n3.010.init  dove_beauty_bar.n4.001.goal  dove_beauty_bar.n4.001.init  dove_beauty_bar.n4.002.init  dove_beauty_bar.n4.003.init  dove_beauty_bar.n4.004.init  dove_beauty_bar.n4.005.init  dove_beauty_bar.n4.006.init  dove_beauty_bar.n4.007.init  dove_beauty_bar.n4.008.init  dove_beauty_bar.n4.009.init  dove_beauty_bar.n4.010.init  dove_beauty_bar.n5.001.goal  dove_beauty_bar.n5.001.init  dove_beauty_bar.n5.002.init  dove_beauty_bar.n5.003.init  dove_beauty_bar.n5.004.init  dove_beauty_bar.n5.005.init  dove_beauty_bar.n5.006.init  (+41 more)
software/planning/input/openspace_sim/: dove_beauty_bar.n10.001.goal  dove_beauty_bar.n10.001.init  dove_beauty_bar.n10.002.init  dove_beauty_bar.n10.003.init  dove_beauty_bar.n10.004.init  dove_beauty_bar.n10.005.init  dove_beauty_bar.n10.006.init  dove_beauty_bar.n10.007.init  dove_beauty_bar.n10.008.init  dove_beauty_bar.n10.009.init  dove_beauty_bar.n10.010.init  dove_beauty_bar.n10.011.init  dove_beauty_bar.n10.012.init  dove_beauty_bar.n10.013.init  dove_beauty_bar.n10.014.init  dove_beauty_bar.n10.015.init  dove_beauty_bar.n10.016.init  dove_beauty_bar.n10.017.init  dove_beauty_bar.n10.018.init  dove_beauty_bar.n10.019.init  dove_beauty_bar.n10.020.init  dove_beauty_bar.n15.001.goal  dove_beauty_bar.n15.001.init  dove_beauty_bar.n15.002.init  dove_beauty_bar.n15.003.init  dove_beauty_bar.n15.004.init  dove_beauty_bar.n15.005.init  dove_beauty_bar.n15.006.init  dove_beauty_bar.n15.007.init  dove_beauty_bar.n15.008.init  dove_beauty_bar.n15.009.init  dove_beauty_bar.n15.010.init  dove_beauty_bar.n15.011.init  dove_beauty_bar.n15.012.init  dove_beauty_bar.n15.013.init  dove_beauty_bar.n15.014.init  dove_beauty_bar.n15.015.init  dove_beauty_bar.n15.016.init  dove_beauty_bar.n15.017.init  dove_beauty_bar.n15.018.init  (+733 more)
software/planning/src/: kinodynamicRRT.cpp  mdp_planner.cpp  planner.cpp  plot_result_robot.py  plot_results.py  statespace.cpp
software/ros-package/src/rl_msgs/: CMakeLists.txt
(+298 files in other folders)
